# DVD_Processing

./: launch.bat  pyproject.toml
docs/plans/: 2026-04-30-gui-design.md
src/dvd_processor/: __main__.py  cli.py  config.py  confirm.py  disc.py  drives.py  gui.py  handbrake.py  matcher.py  renamer.py  tmdb.py
src/dvd_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_confirm.py  test_disc.py  test_drives.py  test_matcher.py  test_renamer.py  test_tmdb.py
